--- a/templates/index.html
+++ b/templates/index.html
@@ -218,19 +218,21 @@
                 </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                    <a href="{% url 'template3' %}">
                     <div class="web-service-block">
                         <i class="ti-announcement"></i>
                         <h3>Digital Marketing</h3>
                         <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
-                    </div>
+                    </div></a>
                 </div>
 
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
+                    <a href="{% url 'template4' %}">
                     <div class="web-service-block">
                         <i class="ti-layers-alt"></i>
                         <h3>Graphic Design</h3>
                         <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
                     <div class="web-service-block">
