--- a/templates/resume/template4.html
+++ b/templates/resume/template4.html
@@ -12,28 +12,33 @@
 <style>
   .resume{
     border: 1px solid;
-    padding-inline: 150px;
+    
   }
 </style>
+
   <body>
 
+    <h1>Resume</h1>
+    <button  style="margin-top: 10px;" class="button btn btn-primary" onclick="getPDF()">Generate pdf</button>
 
 
-      <div class="container mt-4 resume">
+      <div class="container mt-4  ">
+      <div class="resume p-5 ">
+
           <h1 class= "text-center mt-4"><b>My Resume</b></h1>
           <hr>
           <br>
           <br>
         <div class="row center">
-            <u><h5>Name</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.user.first_name}} {{resume.user.last_name}}</h5></u>
+            <u><h5>Name</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.resumeuserdetails_set.all.first.first_name}}  {{resume.resumeuserdetails_set.all.first.last_name}}</h5></u>
         </div>
       
         <div class="row center">
-            <u><h5>Email</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5><a href="#">{{resume.user.email}}</a></h5></u>
+            <u><h5>Email</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5><a href="#">{{resume.resumeuserdetails_set.all.first.email}}</a></h5></u>
         </div>
         
         <div class="row center">
-            <u><h5>Address</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.userextrafields_set.all.first.address}}</h5></u>
+            <u><h5>Address</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.resumeuserdetails_set.all.first.address}}</h5></u>
         </div>
         <hr>
         
@@ -48,38 +53,28 @@
 
         <hr>
       <div class="row">
-        <h4 class= ""><b>Qualification : -</b></h4>    
+        <h4 class= ""><b>Education : -</b></h4>    
           <table class="table">
               <thead>
                   <tr>
-                    <th> title</th>
-                      <th>High School</th>
-                      <th>High Secondary </th>
-                      <th> Graduation</th>
+                    <th> qualifications </th>
+                      <th>passing year</th>
+                      <th>Grade/ Percentage </th>
+                      <th> college/Board</th>
 
                   </tr>
               </thead>
               <tbody>
+                {% for education in resume.education_set.all %}
                   <tr>
-                      <td scope="row">Board/School /College</td>
-                      <td>{{resume.education_set.all.first.degree_class}} &nbsp {{resume.education_set.all.first.university}} </td>
-                      <td>12th from mp board</td>
-                      <td>BE from SVCE</td>
+                      <td scope="row">{{education.qualification_name}}</td>
+                      <td> &nbsp {{education.year_of_passing}} </td>
+                      <td>{{education.percentage_or_grade}}</td>
+                      <td>{{education.university}}</td>
                   </tr>
-                  <tr>
-                      <td scope="row">Percent</td>
-                      <td>{{resume.education_set.all.first.percentage_or_grade}}%  </td>
-                      <td>53%</td>
-                      <td>56%</td>
+                  {% endfor %}
+              
 
-                  </tr>
-                  <tr>
-                    <td scope="row">Year</td>
-                    <td>{{resume.education_set.all.first.year_of_passing}}</td>
-                    <td>2013</td>
-                    <td>2018</td>
-
-                </tr>
               </tbody>
           </table>
      </div>
@@ -88,10 +83,9 @@
       <div class="row">
         <br>
         <ul style=" margin-left: 150px;">
-            <li>{{resume.hobbies_set.all.first.hobbies}}</li>
-            <li>Playing football</li>
-            <li>Reading blogs</li>
-            <li>listening music</li>
+          {% for hobbie in resume.hobbies_set.all %}
+         <li>{{hobbie.hobbies}}</li>
+          {% endfor %}
 
         </ul>
 
@@ -104,14 +98,12 @@
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
         </p>
       </div>
-     </div>
-     
+     </div></div>
+    
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
    
+
+    
     <script type="text/javascript">
       function Copy() 
       {
@@ -121,6 +113,53 @@
           Url.select();  
           document.execCommand("Copy");
       }
+
+
+
 </script>
+
+
+<script type="text/javascript">
+  function getPDF(){
+
+var HTML_Width = $(".container").width();
+var HTML_Height = $(".container").height();
+var margin = 20;
+var PDF_Width = HTML_Width+(margin*2);
+var PDF_Height = (PDF_Width*1.5)+(margin*2);
+var canvas_image_width = HTML_Width;
+var canvas_image_height = HTML_Height;
+
+var totalPDFPages = Math.ceil(HTML_Height/PDF_Height)-1;
+
+
+html2canvas($(".container")[0],{allowTaint:true}).then(function(canvas) {
+  canvas.getContext('2d');
+  
+  console.log(canvas.height+"  "+canvas.width);
+  
+  
+  var imgData = canvas.toDataURL("image/jpeg", 1.0);
+  var pdf = new jsPDF('p', 'pt',  [PDF_Width, PDF_Height]);
+    pdf.addImage(imgData, 'JPG', margin, margin,canvas_image_width,canvas_image_height);
+  
+  
+  for (var i = 1; i <= totalPDFPages; i++) { 
+    pdf.addPage(PDF_Width, PDF_Height);
+    pdf.addImage(imgData, 'JPG', top_left_margin, -(PDF_Height*i)+(margin*4),canvas_image_width,canvas_image_height);
+  }
+  
+    pdf.save("HTML-Document.pdf");
+    });
+};  
+  </script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </body>
 </html>
